# Mini3D

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
doc/: structure.dot
include/: camera.h  color.h  config.h  device.h  display.h  geometry.h  matrix.h  mesh.h  modelutils.h  renderer.h  types.h  vector.h
mini3d/: main.cc
src/: Device.h  DeviceLinux.cpp  DeviceWin32.cpp  Drawable-ncurses.cpp  Drawable-ncurses.h  DrawableUtils.cpp  DrawableUtils.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Types.h  camera.cc  camera.h  device.cc  device.h  device_linux.cc  device_win32.cc  display.cc  display.h  geometry.cc  geometry.cpp  geometry.h  main.cc  main.cpp  mesh.cc  mesh.h  modelutils.h  renderer.cc  renderer.h  types.h
test/: test.cc
